# ZixingImgHosting

./: README.md  manage.py  pyproject.toml
application/: admin.py  asgi.py  custom_exceptions.py  urls.py  wsgi.py
application/settings/: __init__.py  common.py  cors.py  logging.py
apps/: api.py  constants.py
apps/walrus/: admin.py  apps.py  managers.py  models.py  views.py
apps/walrus/migrations/: 0001_initial.py  0002_alter_pictest_options_pictest_created.py  0003_walrusfile.py  0004_walrusfile_size.py  0005_walrusfile_remark.py  0006_alter_walrusfile_content_type_and_more.py
data/: 1.json
pkg/response/: response.py
pkg/utils/backend/: ninja_api.py
pkg/utils/http/walrus/: web.py  webapi.py
templates/walrus/: upload.html
